--- a/static/style/master.css
+++ b/static/style/master.css
@@ -483,7 +483,7 @@ mark {
         left: 0;
         right: 0;
         z-index: 5;
-        background: rgb(0 0 0 / 98%);
+        background: rgb(0 0 0 / 50%);
     }
     .header-nav img{
     padding: 5px auto;
@@ -511,7 +511,7 @@ mark {
     }
     .header-nav .navbar-nav {
         padding: 44px;
-        /* background: rgb(0 0 0 / 98%); */
+        background: rgb(0 0 0 / 90%);
         width: auto;
         max-width: 400px;
         display: flex;
@@ -2554,7 +2554,7 @@ a.button:hover {
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    padding: 3px 0;
+    padding: 2px ;
     margin-top: 10px; /* Khoảng cách từ counter */
     max-width: 90%; /* Giới hạn chiều rộng của thanh thumbnails trong full screen */
     overflow-x: auto; /* Cho phép cuộn ngang nếu có nhiều thumbnails */
