--- a/static/style/master.css
+++ b/static/style/master.css
@@ -2787,6 +2787,7 @@ a.button:hover {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
         filter: grayscale(0%);
     }
 }
@@ -2799,6 +2800,7 @@ a.button:hover {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
         filter: grayscale(0%);
     }
 }
