--- a/static/style/master.css
+++ b/static/style/master.css
@@ -2962,9 +2962,47 @@ a.button:hover {
 /*Frame_3*/
 
 .gallery-frame {
+    padding: 50px 0;
     background: var(--main-bg);
     text-align: center;
     height: 700px;
+
+}
+
+.gallery-tittle h2 {
+    margin-top: 20px;
+    /* margin-bottom: 60px; */
+    font-size: 45px;
+    display: block;
+    font-style: normal;
+    font-weight: 100;
+    text-align: center;
+    font-family: "Sail", system-ui;
+    font-style: normal;
+    
+}
+.gallery-tittle span {
+    margin-top: 80px;
+    font-size: 25px;
+    display: block;
+    font-style: normal;
+    text-align: center;
+    font-family: "Playfair Display";
+    
+}
+.gallery-tittle img {
+    margin-top: 60px;
+    
+}
+.gallery-tittle p {
+    margin-top: 20px;
+    font-size: 20px;
+    display: block;
+    font-weight: 200;
+    font-style: normal;
+    text-align: center;
+    font-family: "Playfair Display";
+    
 }
 @media (max-width: 767px) {
     .gallery-frame {
@@ -2972,29 +3010,21 @@ a.button:hover {
     text-align: center;
     height: 700px;
 }
-}
-.gallery-tittle h3 {
-    font-size: 30px;
-    padding: 90px 0px 0px 0px;
-    text-transform: uppercase;
-    font-family: 'Playfair Display';
-    font-weight: 400px;
-    color: var(--textcolor);
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-    
-}
 .gallery-tittle span {
-    font-size: 20px;
-    font-family: 'Playfair Display';
-    font-weight: 400px;
-    color: var(--textcolor);
-    position: relative;
-    overflow: hidden;
+    margin-top: 40px;
+    font-size: 25px;
+    display: block;
+    font-style: normal;
     text-align: center;
+    font-family: "Playfair Display";
     
 }
+.gallery-tittle img {
+    margin-top: 40px;
+    
+}
+}
+
 
 /* contact-frame */
 
