--- a/static/style/master.css
+++ b/static/style/master.css
@@ -90,77 +90,48 @@ mark {
 
 /*Loading*/
 
-#loading {
+#loader-wrapper {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    background: #222222;
-    z-index: 99999;
-}
-
-
-.text_center {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    min-height: 50px;
-}
-
-.ring {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    animation: ring 2s linear infinite;
-}
-
-.ring::before {
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255); /* Nền trắng hơi trong suốt */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Đảm bảo nó luôn nằm trên cùng */
+}
+
+.loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #0596cf; /* Blue */
     border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite; /* Hiệu ứng xoay */
+    margin-bottom: 20px;
 }
 
-@keyframes ring {
-    0% {
-        transform: rotate(0deg);
-        box-shadow: 1px 1px 1px #181818;
-    }
-    50% {
-        transform: rotate(180deg);
-        box-shadow: 1px 1px 1px #726c6c;
-    }
-    100% {
-        transform: rotate(360deg);
-        box-shadow: 1px 1px 1px #ffffff;
-    }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-.text_center h5 {
-    color: #737373;
-    font-size: 10px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    line-height: 100px;
-    animation: text 2s infinite ease-in-out;
+#loader-wrapper p {
+    font-size: 1.2em;
+    color: #555;
 }
 
-@keyframes text {
-    50% {
-        color: rgb(51, 51, 51);
-    }
+/* Thêm hiệu ứng fade-out cho loader khi tải xong (tùy chọn) */
+#loader-wrapper.hidden {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+    pointer-events: none; /* Ngăn chặn tương tác khi ẩn */
 }
 
+/* end loading */
 
 /* Background color */
 
