--- a/static/style/master.css
+++ b/static/style/master.css
@@ -1224,7 +1224,7 @@ a.button:hover {
     /* line-height: 25px; */
     color: #131313;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 @media (max-width: 768px) {
     .note_quote h2 {
@@ -1239,12 +1239,12 @@ a.button:hover {
 @media (max-width: 768px) {
     .note_quote h3 {
     font-family: "muli", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
     letter-spacing: 3px;
     color: #131313;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 }
 /* TIme count*/
@@ -1253,11 +1253,12 @@ a.button:hover {
   font-family: 'Open sans", sans-serif';
 }
 
-/* h1 {
-  margin-bottom: 40px;
+.timecount h3 {
+
   font-weight: normal;
-  font-size: 1.8rem;
-} */
+  font-size: 20px;
+  font-family: "muli", sans-serif;
+}
 
 .timer-wrapper {
   display: flex;
@@ -1280,6 +1281,18 @@ a.button:hover {
   font-size: 20px;
   /* margin-top: 4px; */
   letter-spacing: 1px;
+}
+@media (max-width: 768px) {
+.timer-wrapper {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  font-size: 20px;
+}
+.number {
+  font-size: 25px;
+  font-weight: 300;
+}
 }
 /* heartbeat animation */
 .heart {
@@ -2318,7 +2331,7 @@ a.button:hover {
     width: 100%;
     height: 100%;
     text-align: center; 
-    padding: 180px 0px 0px 0px;
+    padding: 95px 0px 0px 0px;
     margin-bottom: 50px;
 }
 .couple_memmory span{
