--- a/static/style/master.css
+++ b/static/style/master.css
@@ -1223,13 +1223,13 @@ a.button:hover {
     letter-spacing: 3px;
     /* line-height: 25px; */
     color: #131313;
-    margin-top: 50px;
+    margin-top: 50px;    
     margin-bottom: 30px;
 }
 @media (max-width: 768px) {
     .note_quote h2 {
     font-family: 'Cormorant", sans-serif';
-    font-size: 35px;
+    font-size: 2rem;
     text-align: center;
     letter-spacing: 3px;
     color: #131313;
@@ -1239,7 +1239,7 @@ a.button:hover {
 @media (max-width: 768px) {
     .note_quote h3 {
     font-family: "muli", sans-serif;
-    font-size: 16px;
+    font-size: 22px;
     text-align: center;
     letter-spacing: 3px;
     color: #131313;
@@ -1254,10 +1254,10 @@ a.button:hover {
 }
 
 .timecount h3 {
-
   font-weight: normal;
-  font-size: 20px;
-  font-family: "muli", sans-serif;
+  font-size: 30px;
+  font-family: 'Open sans", sans-serif';
+  padding: 30px 0 10px 0;
 }
 
 .timer-wrapper {
@@ -1281,6 +1281,7 @@ a.button:hover {
   font-size: 20px;
   /* margin-top: 4px; */
   letter-spacing: 1px;
+  font-family: 'Open sans", sans-serif';
 }
 @media (max-width: 768px) {
 .timer-wrapper {
